--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -186,29 +186,125 @@ nav a{
 	color: skyblue;
 }
 
+/*Start Learning Section*/
 
-#courses {
+#startLearning {
+	width: 100%;
 	background-color: #ddd;
-	padding-left: 72PX;
-	padding-right: 72PX;
+	padding-bottom: 30px;
+	
 }
 
-#courses h2 {
+#startLearning h2 {
 	padding-top: 32px;
 	padding-bottom: 32px;
 	text-align: center;
 }
 
-.course {
-	width: 100%;
-	display: inline-flex;
+.courses {
+	margin-left: 72px;
+	margin-right: 72px;
+	display: flex;
+	justify-content: space-between;
+}
+
+#courses {
 	flex-wrap: wrap;
 }
 
+.course {
+	background-color: #fff;
+	width: 31.5%;
+	margin-bottom: 32px;
+}
+
+.course .text{
+	padding-left: 16px;
+	padding-bottom: 24px;
+	padding-right: 16px;
+}
+
+.course img{
+	width: 100%;
+	height: auto;
+}
 
 
+.course h3{
+	padding-top: 16px;
+}
 
+.course span{
+	font-size: 18px;
+	font-weight: 200;
+	text-transform: uppercase;
+	padding-bottom: 8px;
+}
 
+/*Thesis Exhibit Section*/
+
+#thesis-exhibit {
+	width: 100%;
+	/*background-color: red;*/
+	padding-bottom: 32px;
+}
+
+#thesis-exhibit h2{
+	text-align: center;
+	padding-top: 32px;
+	padding-bottom: 32px;
+}
+
+#thesis-content {
+	width: 100%;
+	display: flex;
+	/*justify-content: space-between;*/
+}
+
+#thesis-content #video{
+	width: 60%;
+	padding-left: 24px;
+	padding-right: 24px;
+}
+
+#video video{
+	width: 100%;
+	height: auto;
+}
+
+#video h3{
+	padding-top: 24px;
+	padding-bottom: 8px;
+}
+
+#thesis-content #articles{
+	width: 40%;
+	/*background-color: red;*/
+}
+
+.articles {
+	width: 100%;
+	display: flex;
+}
+
+.art-image {
+	width: 35%;
+	padding: 24px;
+}
+.art-image img {
+	width: 100%;
+	height: auto;
+}
+
+.art-text {
+	width: 65%;
+	margin: auto 0;
+	padding-right: 24px;
+}
+
+#fisma {
+	background-color: #ddd;
+}
 
 
 
